--- a/index.html
+++ b/index.html
@@ -13,38 +13,57 @@
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-   
+
 </head>
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md sticky-top">
-        <div class="container-fluid"><a class="navbar-brand text-uppercase fs-6 link-success d-flex flex-column align-items-center align-items-sm-center" href="/index.html" style="font-style: italic;"><img class="img-fluid wobble animated" src="assets/img/dsjlogo.png" width="150px">drivesafejamaica.com</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container-fluid"><a
+                class="navbar-brand text-uppercase fs-6 link-success d-flex flex-column align-items-center align-items-sm-center"
+                href="/index.html" style="font-style: italic;"><img class="img-fluid wobble animated"
+                    src="assets/img/dsjlogo.png" width="150px">drivesafejamaica.com</a><button data-bs-toggle="collapse"
+                class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle
+                    navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link active" id="link" href="/index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link active" id="link" href="/About/about.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link active" id="link" href="/Test/test.html">Practice Test</a></li>
-                    <li class="nav-item"><a class="nav-link active" id="link" href="/Contact/contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link active" id="link" href="/Test/test.html">Practice Test</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link active" id="link" href="/Contact/contact.html">Contact</a>
+                    </li>
                     <li class="nav-item"></li>
                 </ul>
-            </div><img class="img-fluid flash animated" id="flag" src="assets/img/300x3150Flag_of_Jamaica.png" style="width: 100px;">
+            </div><img class="img-fluid flash animated" id="flag" src="assets/img/300x3150Flag_of_Jamaica.png"
+                style="width: 100px;">
         </div>
     </nav>
     <div class="container" id="landing">
         <div class="row">
             <div class="col-md-6">
-                <p id="right" style="font-weight: bold;">The Official Driver's Guide<br>A comprehensive guide for users of the highway<br></p>
-                <p id="right2" style="font-weight: bold;">purchase / buy<a class="btn btn-primary" role="button" id="pdfB" href="pdf.html"><i class="fas fa-file-pdf"></i>&nbsp;pdf online</a></p><img class="img-fluid" id="book" src="assets/img/bookcoverfinalrevision.png">
+                <p id="right" style="font-weight: bold;">The Official Driver's Guide<br>A comprehensive guide for users
+                    of the highway<br></p>
+                <p id="right2" style="font-weight: bold;">purchase / buy<a class="btn btn-primary" role="button"
+                        id="pdfB" href="pdf.html"><i class="fas fa-file-pdf"></i>&nbsp;pdf online</a></p><img
+                    class="img-fluid" id="book" src="assets/img/bookcoverfinalrevision.png">
             </div>
             <div class="col-md-6">
                 <p id="left" style="font-weight: bold;">pass your road code test</p>
                 <div class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="2500" id="carousel">
                     <div class="carousel-inner">
-                        <div class="carousel-item active"><img class="w-100 d-block" src="assets/img/kia/k1.png" alt="Slide Image"></div>
-                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/kia/k4.png" alt="Slide Image"></div>
-                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/kia/k3.png" alt="Slide Image"></div>
+                        <div class="carousel-item active"><img class="w-100 d-block" src="assets/img/kia/k1.png"
+                                alt="Slide Image"></div>
+                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/kia/k4.png"
+                                alt="Slide Image"></div>
+                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/kia/k3.png"
+                                alt="Slide Image"></div>
                     </div>
-                    <div><a class="carousel-control-prev" href="#carousel" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
+                    <div><a class="carousel-control-prev" href="#carousel" role="button" data-bs-slide="prev"><span
+                                class="carousel-control-prev-icon"></span><span
+                                class="visually-hidden">Previous</span></a><a class="carousel-control-next"
+                            href="#carousel" role="button" data-bs-slide="next"><span
+                                class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a>
+                    </div>
                     <ol class="carousel-indicators">
                         <li data-bs-target="#carousel" data-bs-slide-to="0" class="active"></li>
                         <li data-bs-target="#carousel" data-bs-slide-to="1"></li>
@@ -53,11 +72,19 @@
                 </div>
                 <div class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000" id="carousel">
                     <div class="carousel-inner">
-                        <div class="carousel-item active"><img class="w-100 d-block" src="assets/img/bmw/m1.png" alt="Slide Image"></div>
-                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/bmw/m5.png" alt="Slide Image"></div>
-                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/bmw/m3.png" alt="Slide Image"></div>
+                        <div class="carousel-item active"><img class="w-100 d-block" src="assets/img/bmw/m1.png"
+                                alt="Slide Image"></div>
+                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/bmw/m5.png"
+                                alt="Slide Image"></div>
+                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/bmw/m3.png"
+                                alt="Slide Image"></div>
                     </div>
-                    <div><a class="carousel-control-prev" href="#carousel" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
+                    <div><a class="carousel-control-prev" href="#carousel" role="button" data-bs-slide="prev"><span
+                                class="carousel-control-prev-icon"></span><span
+                                class="visually-hidden">Previous</span></a><a class="carousel-control-next"
+                            href="#carousel" role="button" data-bs-slide="next"><span
+                                class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a>
+                    </div>
                     <ol class="carousel-indicators">
                         <li data-bs-target="#carousel" data-bs-slide-to="0" class="active"></li>
                         <li data-bs-target="#carousel" data-bs-slide-to="1"></li>
@@ -66,11 +93,19 @@
                 </div>
                 <div class="carousel slide carousel-dark" data-bs-ride="carousel" data-bs-interval="3500" id="carousel">
                     <div class="carousel-inner">
-                        <div class="carousel-item active"><img class="w-100 d-block" src="assets/img/jaguar/j1.png" alt="Slide Image"></div>
-                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/jaguar/j4.png" alt="Slide Image"></div>
-                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/jaguar/j5.png" alt="Slide Image"></div>
+                        <div class="carousel-item active"><img class="w-100 d-block" src="assets/img/jaguar/j1.png"
+                                alt="Slide Image"></div>
+                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/jaguar/j4.png"
+                                alt="Slide Image"></div>
+                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/jaguar/j5.png"
+                                alt="Slide Image"></div>
                     </div>
-                    <div><a class="carousel-control-prev" href="#carousel" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
+                    <div><a class="carousel-control-prev" href="#carousel" role="button" data-bs-slide="prev"><span
+                                class="carousel-control-prev-icon"></span><span
+                                class="visually-hidden">Previous</span></a><a class="carousel-control-next"
+                            href="#carousel" role="button" data-bs-slide="next"><span
+                                class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a>
+                    </div>
                     <ol class="carousel-indicators">
                         <li data-bs-target="#carousel" data-bs-slide-to="0" class="active"></li>
                         <li data-bs-target="#carousel" data-bs-slide-to="1"></li>
@@ -79,10 +114,14 @@
                 </div>
                 <section class="py-4 py-xl-5">
                     <div class="container">
-                        <div class="text-white bg-primary border rounded border-0 border-primary d-flex flex-column justify-content-between flex-lg-row p-4 p-md-5" id="lc">
+                        <div class="text-white bg-primary border rounded border-0 border-primary d-flex flex-column justify-content-between flex-lg-row p-4 p-md-5"
+                            id="lc">
                             <div id="lc2" class="pb-2 pb-lg-1">
                                 <h2 class="fw-bold mb-2" id="lc-1">Study and complete the Practice Tests<br></h2>
-                                <p id="lc-2" class="mb-0">Complete the Practice Tests from the comfort of your&nbsp;home, via your smart phone, tablet, laptop or desktop&nbsp;and in your own time.<br></p><a class="btn btn-light fs-5 py-2 px-4" role="button" href="about.html" data-bs-target="about.html" style="margin-top: 15px;">Read More</a>
+                                <p id="lc-2" class="mb-0">Complete the Practice Tests from the comfort of
+                                    your&nbsp;home, via your smart phone, tablet, laptop or desktop&nbsp;and in your own
+                                    time.<br></p><a class="btn btn-light fs-5 py-2 px-4" role="button" href="/About/about.html"
+                                    data-bs-target="about.html" style="margin-top: 15px;">Read More</a>
                             </div>
                             <div class="my-2"></div>
                         </div>
