--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -6,42 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>The Official Driver's Guide - DriveSafeJamaica.com A comprehensive guide for users of the highway</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Flex&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Serif&amp;display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/navdsj.css">
 </head>
 
-<body class="bg-warning">
+<body style="background: url(&quot;assets/img/contactgirl.jpg&quot;) no-repeat;background-size: cover;">
     <nav class="navbar navbar-light navbar-expand-md sticky-top">
-        <div class="container-fluid"><a class="navbar-brand text-uppercase fs-6 link-success d-flex flex-column align-items-center align-items-sm-center" href="/index.html" style="font-style: italic;"><img class="img-fluid wobble animated" src="assets/img/dsjlogo.png" width="150px">drivesafejamaica.com</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container-fluid"><a class="navbar-brand text-uppercase fs-6 link-success d-flex flex-column align-items-center align-items-sm-center" href="index.html" style="font-style: italic;"><img class="img-fluid wobble animated" src="assets/img/dsjlogo.png" width="150px">drivesafejamaica.com</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link active" id="link" href="/index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link active" id="link" href="/About/about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link active" id="link" href="/Test/test.html">Practice Test</a></li>
-                    <li class="nav-item"><a class="nav-link active" id="link" href="/Contact/contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link active" id="link" href="/contact/index.html">Contact</a></li>
                     <li class="nav-item"></li>
                 </ul>
             </div><img class="img-fluid flash animated" id="flag" src="assets/img/300x3150Flag_of_Jamaica.png" style="width: 100px;">
         </div>
     </nav>
-    <section class="shadow contact-clean" style="background: var(--bs-yellow);">
-        <form class="bg-light border rounded border-secondary shadow-lg" method="post" style="background: rgb(248,248,249);">
-            <h2 class="text-center">Contact us</h2>
-            <div class="form-group mb-3"><input class="form-control" type="text" name="name" placeholder="Name"></div>
-            <div class="form-group mb-3"><input class="form-control" type="text" name="phone" placeholder="Phone" inputmode="tel"></div>
-            <div class="form-group mb-3"><input class="form-control" type="email" name="email" placeholder="Email"></div>
-            <div class="form-group mb-3"><textarea class="form-control" name="message" placeholder="Message" rows="14"></textarea></div>
-            <div class="form-group mb-3"><button class="btn btn-primary" type="submit">send </button></div>
-            <div class="form-group mb-3">
-                <p class="text-center text-info" style="font-size: 12px;">Copyright © 2022 drivesafejamaica.com All Rights Reserved.</p>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="shadow" style="width: 100%;min-height: 630px;margin-top: 119px;background-color: rgba(255,255,255,0.79);">
+                    <form style="padding-top: 70px;" data-bss-recipient="1975fbf11096ddf02391fc61b41c0d6d">
+                        <div class="form-group mb-3">
+                            <h1 class="text-center">Contact Us.</h1>
+                        </div>
+                        <div class="form-group mb-3"><input class="form-control form-control-lg" type="text" style="width: 50%;margin-left: 25%;" required="" placeholder="Name"></div>
+                        <div class="form-group mb-3"><input class="form-control form-control-lg" type="email" style="width: 50%;margin-left: 25%;" placeholder="Email"></div>
+                        <div class="form-group mb-3"><textarea class="form-control form-control-lg" style="width: 50%;margin-left: 25%;min-height: 200px;" placeholder="Message"></textarea></div>
+                        <div class="form-group mb-3"><button class="btn btn-dark btn-lg" style="width: 50%;margin-left: 25%;" type="submit">Contact us</button></div>
+                    </form>
+                </div>
             </div>
-        </form>
-    </section>
+        </div>
+    </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/smart-forms.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
 </body>
 
