--- a/About/about.html
+++ b/About/about.html
@@ -28,7 +28,7 @@
                     <li class="nav-item"><a class="nav-link active" id="link" href="/About/about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link active" id="link" href="/Test/test.html">Practice Test</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link active" id="link" href="/Contact/contact.html">Contact</a>
+                    <li class="nav-item"><a class="nav-link active" id="link" href="/contact/contact.html">Contact</a>
                     </li>
                     <li class="nav-item"></li>
                 </ul>
