--- a/Practice1/index.html
+++ b/Practice1/index.html
@@ -14,33 +14,46 @@
 
 <body class="bg-warning">
     <nav class="navbar navbar-light navbar-expand-md sticky-top">
-        <div class="container-fluid"><a class="navbar-brand text-uppercase fs-6 link-success d-flex flex-column align-items-center align-items-sm-center" href="index.html" style="font-style: italic;"><img class="img-fluid wobble animated" src="assets/img/dsjlogo.png" width="150px">drivesafejamaica.com</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container-fluid"><a
+                class="navbar-brand text-uppercase fs-6 link-success d-flex flex-column align-items-center align-items-sm-center"
+                href="index.html" style="font-style: italic;"><img class="img-fluid wobble animated"
+                    src="assets/img/dsjlogo.png" width="150px">drivesafejamaica.com</a><button data-bs-toggle="collapse"
+                class="navbar-toggler" data-bs-target="#navcol"><span class="visually-hidden">Toggle
+                    navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link active" id="link" href="/index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link active" id="link" href="/About/about.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link active" id="link" href="/Test/test.html">Practice Test</a></li>
-                    <li class="nav-item"><a class="nav-link active" id="link" href="/Contact/contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link active" id="link" href="/Test/test.html">Practice Test</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link active" id="link" href="/Contact/contact.html">Contact</a>
+                    </li>
                     <li class="nav-item"></li>
                 </ul>
-            </div><img class="img-fluid flash animated" id="flag" src="assets/img/300x3150Flag_of_Jamaica.png" style="width: 100px;">
+            </div><img class="img-fluid flash animated" id="flag" src="assets/img/300x3150Flag_of_Jamaica.png"
+                style="width: 100px;">
         </div>
     </nav>
-    <div class="container d-md-flex d-xl-flex justify-content-md-center justify-content-xl-center" style="padding: 48px 12px;"><div class="col-md-6">
-<div id="frame" role="content"></div>
-    <!-- <div class="bBTN">
+    <div class="container d-md-flex d-xl-flex justify-content-md-center justify-content-xl-center"
+        style="padding: 48px 12px;">
+        <div class="col-md-6">
+            <div id="frame" role="content"></div>
+            <!-- <div class="bBTN">
         <a id="b1" href="/Test/test.html">Take Another Test</a>
         <a id="b2" href="index.html">Again?</a>
-        
+
     </div> -->
 
-    <script src="assets/js/app.js"></script></div></div>
+            <script src="assets/js/app.js"></script>
+        </div>
+    </div>
     <section class="photo-gallery py-4 py-xl-5">
         <div class="container">
             <div class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-3 photos" data-bss-baguettebox="">
-                <div class="col item"><a href="assets/img/m1.png"><img class="img-fluid" src="assets/img/m1.png"></a></div>
-                <div class="col item"><a href="assets/img/m2.png"><img class="img-fluid" src="assets/img/m2.png"></a></div>
-                <div class="col item"><a href="assets/img/m3.png"><img class="img-fluid" src="assets/img/m3.png"></a></div>
+                <!-- <div class="col item"><a href="assets/img/m1.png"><img class="img-fluid" src="assets/img/m1.png"></a></div> -->
+                <div class="col item"><a href="assets/img/kia1.png" style="width:800px; height:600px;"><img class="img-fluid" src="https://media.giphy.com/media/r41l9xvJ76XkOz0CnF/giphy.gif"></a></div>
+                <div class="col item"><a href="assets/img/kia2.png"><img class="img-fluid" src="https://media.giphy.com/media/8hYPwfb0TOelrTsnhw/giphy.gif" ></a></div>
+                <div class="col item"><a href="assets/img/kia3.png"><img class="img-fluid" src="https://media.giphy.com/media/mnE6ble1OkAD0sraxh/giphy.gif"></a></div>
             </div>
         </div>
     </section>
