--- a/Practice5/index.html
+++ b/Practice5/index.html
@@ -41,9 +41,9 @@
     <section class="photo-gallery py-4 py-xl-5">
         <div class="container">
             <div class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-3 photos" data-bss-baguettebox="">
-                <div class="col item"><a href="assets/img/m1.png"><img class="img-fluid" src="assets/img/m1.png"></a></div>
-                <div class="col item"><a href="assets/img/m2.png"><img class="img-fluid" src="assets/img/m2.png"></a></div>
-                <div class="col item"><a href="assets/img/m3.png"><img class="img-fluid" src="assets/img/m3.png"></a></div>
+                <div class="col item"><a href="assets/img/kia1.png" style="width:800px; height:600px;"><img class="img-fluid" src="https://media.giphy.com/media/r41l9xvJ76XkOz0CnF/giphy.gif"></a></div>
+                <div class="col item"><a href="assets/img/kia2.png"><img class="img-fluid" src="https://media.giphy.com/media/8hYPwfb0TOelrTsnhw/giphy.gif" ></a></div>
+                <div class="col item"><a href="assets/img/kia3.png"><img class="img-fluid" src="https://media.giphy.com/media/mnE6ble1OkAD0sraxh/giphy.gif"></a></div>
             </div>
         </div>
     </section>
