--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -12,13 +12,13 @@
 
 <body style="background: url(&quot;assets/img/contactgirl.jpg&quot;) no-repeat;background-size: cover;">
     <nav class="navbar navbar-light navbar-expand-md sticky-top">
-        <div class="container-fluid"><a class="navbar-brand text-uppercase fs-6 link-success d-flex flex-column align-items-center align-items-sm-center" href="index.html" style="font-style: italic;"><img class="img-fluid wobble animated" src="assets/img/dsjlogo.png" width="150px">drivesafejamaica.com</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container-fluid"><a class="navbar-brand text-uppercase fs-6 link-success d-flex flex-column align-items-center align-items-sm-center" href="/index.html" style="font-style: italic;"><img class="img-fluid wobble animated" src="assets/img/dsjlogo.png" width="150px">drivesafejamaica.com</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link active" id="link" href="/index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link active" id="link" href="/About/about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link active" id="link" href="/Test/test.html">Practice Test</a></li>
-                    <li class="nav-item"><a class="nav-link active" id="link" href="/contact/index.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link active" id="link" href="/contact/contact.html">Contact</a></li>
                     <li class="nav-item"></li>
                 </ul>
             </div><img class="img-fluid flash animated" id="flag" src="assets/img/300x3150Flag_of_Jamaica.png" style="width: 100px;">
