--- a/Test/test.html
+++ b/Test/test.html
@@ -169,7 +169,7 @@
 
 
             <!-- Second Row [Advertisemnet]-->
-            <h2 class="font-weight-bolder mb-2">Advertisement</h2>
+            <!-- <h2 class="font-weight-bolder mb-2">Advertisement</h2> -->
             <p class="font-italic text-muted mb-4">Digital display ad campaigns</p>
 
             <div class="row pb-5 mb-4">
